# invoice-assistant

./: .gitignore  AGENTS.md  pyproject.toml  发票整理助手_评审终版_重新生成.md
.ai-sdlc/memory/: constitution.md
.ai-sdlc/profiles/: decisions.yml  tech-stack.yml
.codex/: AI-SDLC.md
.github/workflows/: ci.yml  compatibility-gate.yml  cross-platform-core.yml  posix-offline-smoke.yml  pr-checks.yml  release-artifact-smoke.yml  release-build.yml  windows-offline-smoke.yml
backend/: __init__.py  pyproject.toml
backend/app/: main.py
backend/app/api/: actors.py  batches.py  config.py  dependencies.py  invoices.py  runtime.py  serializers.py
backend/app/core/: logging.py  runtime_config.py
backend/app/db/: models.py  session.py
backend/app/services/: batch_service.py  compliance_service.py  config_service.py  export_service.py  naming_service.py  processing_runner.py  processing_service.py  progress_service.py  recovery_service.py  retry_service.py  review_queue_service.py  status_service.py  storage_service.py
backend/app/services/parsing/: __init__.py  evidence_models.py  providers.py
backend/app/services/rules/: __init__.py  buyer_validation.py  duplicate_detector.py  risk_classifier.py
backend/tests/: test_api_workflows.py  test_app_boot.py  test_batch_storage.py  test_ci_workflow.py  test_cloud_release_bundle.py  test_config_versioning.py  test_document_evidence.py  test_end_to_end_batch.py  test_export_service.py  test_git_tracked_policy.py  test_naming_and_display_status.py  test_portable_bootstrap.py  test_portable_build.py  test_portable_launcher.py  test_prepare_windows_portable_runtime.py  test_processing_jobs.py  test_processing_recovery.py  test_processing_runtime.py  test_progress_reporting.py  test_release_runtime.py  test_rules_pipeline.py  test_windows_dev_bundle.py  test_workspace_cli.py
docs/: ai-sdlc-runtime-file-versioning.zh-CN.md  framework-defect-backlog.zh-CN.md  invoice-assistant-gap-backlog.zh-CN.md  pull-request-checklist.zh.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  main.tsx  styles.css
frontend/tests/: app-shell.test.ts  app-shell.test.tsx  config-field-editor.test.tsx  manual-checklist.md  result-presentation.test.ts  runtime-ui.test.tsx  setup.ts
packaging/offline/: install_offline.bat  停止发票助手.bat  (+13 more)
scripts/: build_cloud_release_bundle.py  build_windows_dev_bundle.py  build_windows_portable.py  prepare_windows_portable_runtime.py
workspace_tools/: __init__.py  cli.py  version_control_policy.py
(+171 files in other folders)
