[project]
name = "invoice-assistant-backend"
version = "0.5.1"
description = "Local FastAPI backend for invoice assistant."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "sqlalchemy>=2.0.32,<3.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "pypdf>=6.10.2",
    "pypdfium2>=5.7.0",
    "pillow>=12.2.0",
    "rapidocr-onnxruntime>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
